--- a/templates/users.html
+++ b/templates/users.html
@@ -20,10 +20,10 @@
         <tbody>
             {% for user in users %}
             <tr>
-                <td>{{ user.name }}</td>
-                <td>{{ user.username }}</td>
-                <td>{{ user.password }}</td>
-                <td>{{ user.permission }}</td>
+                <td>{{ user[0] }}</td>
+                <td>{{ user[1] }}</td>
+                <td>{{ user[2] }}</td>
+                <td>{{ user[3] }}</td>
             </tr>
             {% endfor %}
         </tbody>
