--- a/templates/products.html
+++ b/templates/products.html
@@ -20,9 +20,9 @@
         <tbody>
             {% for product in products %}
             <tr>
-                <td>{{ product.name }}</td>
-                <td>{{ product.category }}</td>
-                <td>{{ product.price }}</td>
+                <td>{{ product[0] }}</td>
+                <td>{{ product[1] }}</td>
+                <td>{{ product[2] }}</td>
             </tr>
             {% endfor %}
         </tbody>
