--- a/templates/account.html
+++ b/templates/account.html
@@ -12,16 +12,16 @@
     <table>
         <tbody>
             <tr>
-                <td>Nome: {{ user.name }}</td>
+                <td>Nome: {{ user[0] }}</td>
             </tr>
             <tr>
-                <td>Usuário: {{ user.username }}</td>
+                <td>Usuário: {{ user[1] }}</td>
             </tr>
             <tr>
-                <td>Senha: {{ user.password }}</td>
+                <td>Senha: {{ user[2] }}</td>
             </tr>
             <tr>
-                <td>Permissão: {{ user.permission }}</td>
+                <td>Permissão: {{ user[3] }}</td>
             </tr>
         </tbody>
 
